@@ -1,4 +1,5 @@
 0.04
+ - Add query process for lexeme (statements).
  - Update copyright years.
 
 0.03 2023-10-30T11:58:55+01:00
